移除一些没用的文件

--- a/index.html
+++ b/index.html
@@ -2,28 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>EPMS工程项目管理系统</title>
+    <title>testVue</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="static/useJs/bootstrap.min.css">
-    <script src="static/useJs/jquery.min.js"></script>
-    <script src="static/useJs/zte.ajax.js"></script>
-    <script src="static/useJs/htWeb/ykcDibyPrMiC.js"></script>
-    <script rel='ht-style'>
-    ({
-        'ht.ui.TableView':{
-            rowHeight:40,
-        },
-        'ht.ui.TableHeader':{
-          labelColor:"#333",
-          labelFont:"14px Helvetica Neue",
-        }
-    })
-    </script>
-    <script src="static/useJs/htWeb/ht.js"></script>
-    <script src="static/useJs/htWeb/ht-ui.js"></script>
-    <script src="static/useJs/htWeb/ht-htmlnode.js"></script>
   </head>
   <body>
     <div id="app"></div>
